fix auth with no jwt and add get Locations